# HVamp

./: HVamp.cabal  README  README.md  Setup.hs
c-src/: hvamp.cpp
include/: hvamp.cpp  hvamp.h
src/: HVamp.hs  Host.hs  Vamp.hsc
