name: HVamp
version: 0.1
synopsis: A Vamp host in Haskell
homepage: http://code.ismsgroup.net/hvamp/
author: Richard Lewis
license: LGPL
build-type: Simple
cabal-version: >= 1.8

library
  build-depends: base, vector, transformers, async, parallel
  exposed-modules: HVamp, Vamp
  hs-source-dirs: src
  include-dirs: include
  extra-libraries: stdc++, dl, vamp-hostsdk
  c-sources: c-src/hvamp.cpp
  ghc-options: -pgml g++ -Wall
