name: HVamp
version: 0.1
synopsis: A Vamp host in Haskell
homepage: http://code.ismsgroup.net/hvamp/
author: Richard Lewis
license: LGPL
build-type: Simple
cabal-version: >= 1.8

library
  build-depends: base, vector
  exposed-modules: HVamp
  other-modules: Vamp, Host
  hs-source-dirs: src
  extra-libraries: stdc++, dl, vamp-hostsdk
  ghc-options: -debug -Wall
  cc-options: -ggdb -O0
